docs: build out the base content pages for mediwave

--- a/src/content/IndexPage/brand.mdx
+++ b/src/content/IndexPage/brand.mdx
@@ -1,5 +1,5 @@
 ---
-title: From start-ups to Fortune 500, we partner with brands of all sizes
+title: Trusted by mental health practices nationwide - from solo therapists to multi-location clinics
 images:
   - "/assets/img/th-1/brand-1.png"
   - "/assets/img/th-1/brand-2.png"
