--- a/src/content/IndexPage/content-1.mdx
+++ b/src/content/IndexPage/content-1.mdx
@@ -1,8 +1,8 @@
 ---
-header: Boost the effectiveness of your promotions as well as polish your branding
+header: Your complete growth partner for mental health practices
 image: /assets/img/th-1/content-img-1.png
 ---
 
-SINCE 1998, we transform bold business ideas into exceptional digital products. We ideate, design, and develop data-driven digital products made to answer business challenges.
+Running a successful mental health practice requires more than clinical expertise. You need consistent patient flow, efficient operations, and proper accreditation - all while maintaining the trust and confidentiality your patients deserve.
 
-We offer 360° services to smoothly guide you on your way to creating a seamless digital masterpiece projects on budget and on time.
+Mediwave specializes exclusively in mental health practices. We combine ethical marketing strategies with modern practice management solutions to help you reach more people who need your help, while giving you back time to focus on what matters most - your patients.
