--- a/src/content/IndexPage/hero.mdx
+++ b/src/content/IndexPage/hero.mdx
@@ -1,13 +1,14 @@
 ---
-header: We focus on growing your brand online
+header: Grow Your Mental Health Practice
 description: >-
-  Build world-class digital products with a team of design, development &
-  strategy experts. All in one place. We can provide your business with a
-  variety of digital solutions.
+  The specialized marketing and operations partner for therapists, counselors, 
+  and mental health clinics. We help you attract more patients, streamline 
+  your practice, and achieve accreditation - all with the sensitivity and 
+  compliance your field demands.
 image: /assets/img/th-1/hero-img.png
 PreviewVideo: "https://www.youtube.com/watch?v=3nQNiWdeH2Q"
 form:
-  placeholder: Enter your email
-  buttonText: Subscribe
-  text: No credit card is required. You can cancel anytime
+  placeholder: Enter your practice email
+  buttonText: Get Free Growth Plan
+  text: 100% HIPAA compliant. Designed exclusively for mental health.
 ---
