--- a/src/content/IndexPage/qna.mdx
+++ b/src/content/IndexPage/qna.mdx
@@ -1,17 +1,17 @@
 ---
-header: Frequently asked questions about our digital agency
+header: Common questions about growing mental health practices
 content:
-  - Q: What is a digital agency?
-    A: A digital agency is a company that leverages digital channels to grow their clients' brands online. ls and technologies such as web design, digital marketing, creative design and app development.
-  - Q: What services does a digital agency provide?
-    A: A digital agency is a company that leverages digital channels to grow their clients' brands online. ls and technologies such as web design, digital marketing, creative design and app development.
-  - Q: "Hiring a digital agency vs hiring in-house: What is the difference?"
-    A: A digital agency is a company that leverages digital channels to grow their clients' brands online. ls and technologies such as web design, digital marketing, creative design and app development.
-  - Q: What questions should you ask when interviewing a digital agency?
-    A: A digital agency is a company that leverages digital channels to grow their clients' brands online. ls and technologies such as web design, digital marketing, creative design and app development.
-  - Q: How do digital agencies charge for their services?
-    A: A digital agency is a company that leverages digital channels to grow their clients' brands online. ls and technologies such as web design, digital marketing, creative design and app development.
+  - Q: How is marketing for mental health different from other medical practices?
+    A: Mental health marketing requires special sensitivity around patient privacy, reducing stigma, and building trust. All our strategies are designed specifically for mental health providers, ensuring HIPAA compliance while respecting the unique therapeutic relationship. We focus on ethical marketing that helps people find the help they need.
+  - Q: Can you help with insurance credentialing and accreditation?
+    A: Yes! We provide comprehensive accreditation support for CARF, Joint Commission, and other mental health-specific certifications. We guide you through the entire process, from initial assessment to maintaining compliance. Many practices see improved reimbursement rates after achieving accreditation.
+  - Q: How do you ensure patient confidentiality in your marketing?
+    A: Every strategy we implement is 100% HIPAA compliant. We never use patient information in marketing, carefully manage online reviews to protect privacy, and ensure all digital tools meet the highest security standards. Patient confidentiality is our top priority.
+  - Q: What results do mental health practices typically see?
+    A: Most practices see 30-50% increase in new patient inquiries within 90 days. Our automation typically reduces no-shows by 40% and saves 10+ hours weekly on administrative tasks. Practices that achieve accreditation often see 15-20% improvement in reimbursement rates.
+  - Q: Do you work with all types of mental health providers?
+    A: We work with individual therapists, group practices, psychiatrists, counseling centers, and specialty mental health clinics. Whether you focus on anxiety, depression, trauma, addiction, or other specialties, we customize our approach to your specific practice needs and target population.
 button:
-  text: Still, have any questions? Contact us
+  text: Ready to grow your practice? Let's talk
   link: /contact
 ---
