--- a/src/content/IndexPage/testimonial.mdx
+++ b/src/content/IndexPage/testimonial.mdx
@@ -1,7 +1,7 @@
 ---
-Header: Most of our satisfied clients leave their feedback
-name: Dominika Drońska
-clientWords: They're probably one of the easiest vendors I've ever worked with in the digital space. They have our best interests in mind. The team went the extra mile in negotiating costs and delivering within a flexible scope. They’re customer focused and strong in terms of development quality.
-designation: Senior Digital Marketing Manager, Abbey Road Studios
+Header: Mental health professionals trust Mediwave to deliver results
+name: Dr. Jennifer Martinez, LMFT
+clientWords: Mediwave understood our unique needs as a mental health practice from day one. They helped us increase new patient inquiries by 45% while maintaining complete HIPAA compliance. Their accreditation support was invaluable - we achieved CARF certification in just 6 months. I finally have time to focus on my patients instead of marketing and paperwork.
+designation: Clinical Director, Serenity Counseling Center
 image: /assets/img/th-1/testimonial-image-1.jpg
 ---
