--- a/src/content/Pricing/plan-1.mdx
+++ b/src/content/Pricing/plan-1.mdx
@@ -1,18 +1,17 @@
 ---
-name: Free Plan
-price: 00 #monthly
-description: No credit card required
+name: Solo Practice
+price: 1,997 #monthly
+description: Perfect for individual therapists ready to grow
 points:
   included:
-    - Unlimited chats & websites
-    - 60-day conversations history
-    - Basic widget customization
-    - Web, desktop & mobile apps
-    - Engage visitors via visitor list
-  excluded:
-    - Engage visitors via visitor list
-    - Engage with automatic messages
+    - HIPAA-compliant website & hosting
+    - Local SEO "therapist near me" optimization
+    - Online scheduling (goodbye phone tag!)
+    - Google Business Profile management
+    - 5 educational blog posts monthly
+    - Automated appointment reminders
+    - Monthly growth reports
 button:
-  text: Purchase Now
+  text: Start Growing
   link: "#"
 ---
