--- a/src/content/Pricing/plan-2.mdx
+++ b/src/content/Pricing/plan-2.mdx
@@ -1,17 +1,18 @@
 ---
-name: Popular Plan
-price: 199 #monthly
-description: No credit card required
+name: Group Practice
+price: 3,997 #monthly
+description: For practices ready to scale beyond the waiting list
 points:
   included:
-    - Unlimited chats & websites
-    - 60-day conversations history
-    - Basic widget customization
-    - Web, desktop & mobile apps
-    - Engage visitors via visitor list
-    - Engage visitors via visitor list
-    - Engage with automatic messages
+    - Everything in Solo Practice
+    - Multi-therapist scheduling & profiles
+    - Automated intake forms (save 10hrs/week)
+    - Insurance verification integration
+    - Online reputation management
+    - Targeted PPC campaigns for specialties
+    - Bi-weekly strategy sessions
+    - No-show reduction system
 button:
-  text: Purchase Now
+  text: Scale Your Practice
   link: "#"
 ---
