--- a/src/content/Pricing/plan-3.mdx
+++ b/src/content/Pricing/plan-3.mdx
@@ -1,18 +1,19 @@
 ---
-name: Standard Plan
-price: 49 #monthly
-description: No credit card required
+name: Clinic Transformation
+price: 7,997 #monthly
+description: Complete digital ecosystem for ambitious practices
 points:
   included:
-    - Unlimited chats & websites
-    - 60-day conversations history
-    - Basic widget customization
-    - Web, desktop & mobile apps
-    - Engage visitors via visitor list
-  excluded:
-    - Engage visitors via visitor list
-    - Engage with automatic messages
+    - Everything in Group Practice
+    - Custom patient portal development
+    - CARF/Joint Commission prep support
+    - Multi-location management tools
+    - Advanced analytics dashboard
+    - Dedicated success strategist
+    - Priority 24/7 support (even during crises)
+    - Telehealth platform integration
+    - Quarterly business reviews
 button:
-  text: Purchase Now
+  text: Transform Your Practice
   link: "#"
 ---
