--- a/src/content/aboutPage/facts.mdx
+++ b/src/content/aboutPage/facts.mdx
@@ -1,12 +1,12 @@
 ---
-header: Our creative talent has been influencing branding around the world for a long time
+header: Trusted by mental health practices nationwide to deliver real results
 button:
-  text: Get in touch
+  text: Start growing today
   link: /contact
-SatisfiedClients: 36 #(in thousand)
-ActiveEngagement: 80
-SuccessProjects: 54
-AwardsWinning: 72
+SatisfiedClients: 2 #(in thousand)
+ActiveEngagement: 95
+SuccessProjects: 150
+AwardsWinning: 12
 ---
 
-With more than a decade of experience. We are worry about the details so you need don't have to. When you work with our agency, you can be sure that your website meets every standard.
+With deep expertise in mental health marketing and operations, we handle the business side so you can focus on healing. When you partner with Mediwave, you get a team that understands HIPAA compliance, ethical marketing, and the unique needs of mental health practices.
