--- a/src/content/aboutPage/features.mdx
+++ b/src/content/aboutPage/features.mdx
@@ -1,22 +1,22 @@
 ---
-header: Our core values that drive everything we do
+header: Our commitment to mental health practices
 features:
   - image: "/assets/img/icons/icon-yellow-feature-1.svg"
-    title: Passionate about work
-    description: Passion for work is a enthusiasm and excitement for what you do.
+    title: Mental health focused
+    description: 100% dedicated to mental health practices with specialized expertise
   - image: "/assets/img/icons/icon-yellow-feature-2.svg"
-    title: Creative team members
-    description: A creative team is to design and execute campaigns & encourage
+    title: HIPAA compliant always
+    description: Every solution we implement meets the highest security standards
   - image: "/assets/img/icons/icon-yellow-feature-3.svg"
-    title: Innovation solutions
-    description: using either completely concepts finding new ways of using existing
+    title: Ethical marketing
+    description: Respectful strategies that reduce stigma and build trust
   - image: "/assets/img/icons/icon-yellow-feature-4.svg"
-    title: Qualitiful products
-    description: Product quality refers to how well a product satisfies our customer
+    title: Proven results
+    description: Average 40% increase in new patients within 90 days
   - image: "/assets/img/icons/icon-yellow-feature-5.svg"
-    title: Customer satisfaction
-    description: Happy customers are delighted because of the customer service
+    title: Full-service support
+    description: From marketing to operations to accreditation guidance
   - image: "/assets/img/icons/icon-yellow-feature-6.svg"
-    title: Simplicity interface
-    description: Simplicity is used loosely to refer to the need to minimize a process.
+    title: Simple pricing
+    description: Transparent pricing with no hidden fees or long contracts
 ---
