--- a/src/content/aboutPage/hero.mdx
+++ b/src/content/aboutPage/hero.mdx
@@ -1,12 +1,12 @@
 ---
-header: Our vision is to build brands and provide world-class experiences to our client
-blockquote: “We love what we do & create partnerships with our clients to ensure their digital transformation is positioned for long-term success.”
+header: Dedicated to helping mental health practices thrive
+blockquote: "We believe every mental health professional deserves the tools and support to reach more people who need their help. Our mission is to empower practices with ethical marketing and efficient operations."
 img: /assets/img/th-1/hero-img.png
 person:
-  name: Karen Lynn
-  post: CEO & Co-founder @ Company
+  name: Dr. Michael Chen
+  post: Clinical Director @ Harmony Wellness Center
   image: /assets/img/th-1/about-hero-user-blockquote-img.jpg
 videoLink: https://youtu.be/3nQNiWdeH2Q
 ---
 
-SINCE 1998, we transform bold business ideas into exceptional digital products. We ideate, design, and develop data-driven digital products made to answer business challenges.
+Since 2020, we've specialized exclusively in mental health practices. We combine healthcare expertise with modern marketing and technology to help therapists, counselors, and mental health clinics grow sustainably while maintaining the highest ethical standards.
