--- a/src/content/career/career-1.mdx
+++ b/src/content/career/career-1.mdx
@@ -1,80 +1,72 @@
 ---
-position: UI/UX and product designer
-description: Product designers are involved in the entire design process a of a product, while UX designers focus more on the hands-on design portion of a best a process. Product designers and user an experience (UX) designers are the similar—in fact, sometimes the titles are used interchangeably.
+position: Client Success Manager
+description: As a Client Success Manager at Mediwave, you'll be the trusted advisor for mental health practices nationwide. You'll guide therapists and clinic owners through their growth journey, ensuring they achieve their goals while maintaining the highest standards of patient care and compliance. This role combines account management, project coordination, and strategic consulting.
 type: Full Time
-category: design
-location: London, UK
-salaryRange: $25k-$40k
+category: client-success
+location: Remote
+salaryRange: $25k-$35k
 ---
 
 ##### Job Responsibilities
 
-By partnering with cross-functional teams and customers, for you will turn your insights into delightful creative environment that requires proven leadership skills and the ability.
+You'll be the primary point of contact for 15-20 mental health practices, guiding them through our comprehensive service offerings while ensuring exceptional results and client satisfaction.
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    Manage client relationships from onboarding through ongoing success, serving as their strategic partner
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Coordinate service delivery across marketing, operations, and accreditation teams</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Conduct monthly strategy sessions with practice owners to review performance and adjust tactics
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Monitor client KPIs including patient acquisition, retention, and operational efficiency</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Identify upsell opportunities when practices are ready for additional services or higher tiers
   </li>
   <li>
-    Work closely with product engineers to suggest improvements for products.
+    Ensure all client deliverables meet HIPAA compliance and ethical marketing standards
   </li>
   <li>
-    Present product design ideas to cross-functional teams and senior
-    leadership.
+    Advocate for client needs internally and translate technical solutions into clear recommendations
   </li>
 </ul>
 
 ##### Requirements
 
-Proven experience in all phases of the design process including user for a research, copywriting, wireframing, prototyping, visual design, interaction design, and usability testing
+We're looking for someone who understands both business operations and the unique sensitivities of mental healthcare. Experience in healthcare is preferred but not required if you demonstrate strong empathy and quick learning ability.
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    3+ years of account management, client success, or project management experience
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Exceptional communication skills - you can explain complex topics simply and with empathy</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Strong project management abilities with experience coordinating multiple stakeholders
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Data-driven mindset with ability to analyze metrics and translate into actionable insights</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Understanding of digital marketing fundamentals (SEO, PPC, social media)
   </li>
   <li>
-    Work closely with product engineers to suggest improvements for products.
+    Bonus: Experience with healthcare, mental health, or other regulated industries
   </li>
   <li>
-    Present product design ideas to cross-functional teams and senior
-    leadership.
+    Bonus: Knowledge of HIPAA compliance, healthcare accreditation, or practice management systems
   </li>
 </ul>
 
-##### Skill & Experience
+##### Skills & Experience
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    Proficiency with project management tools (Asana, Monday, or similar)
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Experience with CRM systems and client reporting dashboards</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Strong analytical skills with ability to interpret marketing and operational metrics
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Excellent time management - you'll juggle multiple clients with varying needs</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Remote work experience with proven ability to build relationships virtually
   </li>
 </ul>
