--- a/src/content/career/career-2.mdx
+++ b/src/content/career/career-2.mdx
@@ -1,80 +1,72 @@
 ---
-position: Junior content writer
-description: Product designers are involved in the entire design process a of a product, while UX designers focus more on the hands-on design portion of a best a process. Product designers and user an experience (UX) designers are the similar—in fact, sometimes the titles are used interchangeably.
+position: Social Media Marketing Specialist
+description: Join Mediwave as a Social Media Marketing Specialist where you'll create compassionate, engaging content that helps mental health practices connect with people who need their services. You'll manage social media strategies that reduce stigma, build trust, and grow practices - all while maintaining the highest ethical standards in healthcare marketing.
 type: Remote
-category: business
-location: United State
-salaryRange: $10k-$35k
+category: marketing
+location: United States
+salaryRange: $45k-$65k
 ---
 
 ##### Job Responsibilities
 
-By partnering with cross-functional teams and customers, for you will turn your insights into delightful creative environment that requires proven leadership skills and the ability.
+You'll develop and execute social media strategies for 10-15 mental health practices, creating content that resonates with people seeking support while respecting the sensitivity of mental health topics.
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    Create and schedule social media content across platforms (Facebook, Instagram, LinkedIn, TikTok)
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Develop content calendars aligned with mental health awareness dates and practice specialties</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Write compassionate, educational posts that reduce stigma and encourage help-seeking
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Monitor and respond to comments/messages while maintaining HIPAA compliance</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Analyze social media metrics and provide monthly performance reports to clients
   </li>
   <li>
-    Work closely with product engineers to suggest improvements for products.
+    Collaborate with therapists to transform clinical insights into accessible social content
   </li>
   <li>
-    Present product design ideas to cross-functional teams and senior
-    leadership.
+    Stay current on platform updates and mental health marketing best practices
   </li>
 </ul>
 
 ##### Requirements
 
-Proven experience in all phases of the design process including user for a research, copywriting, wireframing, prototyping, visual design, interaction design, and usability testing
+We need someone who understands both social media marketing and the unique sensitivities of mental health communication. You'll balance engagement with ethics, creativity with compliance.
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    2+ years of social media marketing experience, preferably in healthcare or wellness
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Exceptional writing skills with ability to adapt tone for different audiences</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Understanding of HIPAA and ethical considerations in healthcare marketing
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Experience with social media management tools (Hootsuite, Buffer, Sprout Social)</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Strong visual eye - ability to create or direct creation of graphics using Canva or similar
   </li>
   <li>
-    Work closely with product engineers to suggest improvements for products.
+    Data-driven approach with experience in social media analytics and reporting
   </li>
   <li>
-    Present product design ideas to cross-functional teams and senior
-    leadership.
+    Bonus: Personal or professional experience with mental health topics
   </li>
 </ul>
 
-##### Skill & Experience
+##### Skills & Experience
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    Proficiency with major social media platforms and their business tools
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Experience with content creation tools (Canva, Adobe Creative Suite basics)</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Understanding of social media advertising and targeting for healthcare
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Knowledge of SEO principles as they apply to social media</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Excellent time management - you'll manage multiple client accounts simultaneously
   </li>
 </ul>
