--- a/src/content/contact/index.mdx
+++ b/src/content/contact/index.mdx
@@ -1,22 +1,22 @@
 ---
 cards:
-  - title: Chat with us
-    description: We're waiting to help you every Monday-Friday from 9 am to 5 pm EST easily.
+  - title: Schedule a consultation
+    description: Book a free 30-minute consultation to discuss how we can help grow your practice. Available Monday-Friday, 9 AM to 6 PM EST.
     icon: "/assets/img/icons/icon-duotone-chat.svg"
-  - title: Give us a call
-    description: Give us a ring at (+012-345-567-890). Every monday-friday from 9 am to 5 pm.
+  - title: Call us directly
+    description: Speak with a mental health marketing specialist at (555) 123-4567. We understand your unique needs. Monday-Friday, 9 AM to 6 PM EST.
     icon: /assets/img/icons/icon-duotone-phone.svg
-  - title: Email Us
-    description: Drop us an email at example@gmail.com and you'll receive a reply within 24 hours.
+  - title: Email us anytime
+    description: Send us a message at hello@mediwave.com. We'll respond within 24 hours with thoughtful solutions for your practice.
     icon: /assets/img/icons/icon-duotone-message.svg
-mail: example@gmail.com
-phone: +012-345-567-890
-address: 4132 Thornridge City, New York.
-header: Fill out this form, We ‘ll quickly get back to you
-description: We are here to help you! Tell us how we can help and we’ll get in touch within next 24hrs with expert
+mail: hello@mediwave.com
+phone: (555) 123-4567
+address: 100% Remote - Serving mental health practices nationwide
+header: Let's discuss how to grow your mental health practice
+description: We understand the unique challenges of mental health practices. Tell us about your goals and we'll create a customized growth plan that respects your values and serves your patients better.
 client:
-  name: Brooklyn Simmons
-  post: CEO & Co-founder @ Company
-  testimonial: "Snaga did an exceptional job for us. keep up the excellent digital work. Man, this thing is getting better and better as I learn more about it. I have gotten at least 50 times the value from Snaga. It is worth much more than I paid."
+  name: Dr. Sarah Thompson, LPC
+  post: Founder, Mindful Therapy Associates
+  testimonial: "Mediwave truly understands mental health practices. They helped us grow from 3 to 8 therapists in just one year while maintaining our therapeutic values. Their HIPAA-compliant systems and ethical marketing approach gave us confidence to expand. They're not just vendors - they're partners in our mission to help more people."
   image: /assets/img/th-1/about-hero-user-blockquote-img-2.jpg
 ---
