--- a/src/content/notFound/index.mdx
+++ b/src/content/notFound/index.mdx
@@ -1,6 +1,6 @@
 ---
-header: Page not found
-description: The requested URL you are looking for doesn't exist on this server.
+header: Oops! This page is taking a mental health day
+description: Even websites need a break sometimes. Let's get you back to where you need to be. (404 Error)
 image: /assets/img/th-1/404-img.svg
 button:
   text: Back to Homepage
