--- a/src/content/portfolio/index.mdx
+++ b/src/content/portfolio/index.mdx
@@ -1,15 +1,16 @@
 ---
-indexHeader: We create world-class web design, & branding
+indexHeader: Transforming mental health practices with comprehensive solutions
 button:
   link: /portfolio
-  text: See more works
+  text: View success stories
 sliderText:
-  - We complete client's projects efficiently
-  - We complete client's projects efficiently
-  - We complete client's projects efficiently
-  - We complete client's projects efficiently
+  - We help mental health practices grow sustainably
+  - From accreditation to patient acquisition
+  - Complete practice transformation services
+  - Proven results for therapists and clinics
 relatedProjectsText:
-  There are many variations of passages of Lorem Ipsum available, but
-  the majority have suf alteration in some form, by injected humour, or
-  randomised words which don't look even slightly believable.
+  Every mental health practice has unique needs. We provide tailored solutions 
+  that respect your therapeutic approach while modernizing your operations. 
+  From solo therapists to multi-location clinics, we deliver measurable growth 
+  while maintaining the highest ethical standards.
 ---
