--- a/src/content/portfolio/portfolio-1.mdx
+++ b/src/content/portfolio/portfolio-1.mdx
@@ -1,38 +1,31 @@
 ---
-title: The power of Communication
+title: Harmony Wellness Center
 image: /assets/img/th-1/portfolio-img-1.jpg
-type: App
-category: UI/UX Design
-client: John Smith
-duration: 1 Month
-websiteLink: example@gmail.com
-shortDescription: Mobile UX design is the design of user experiences for hand-held and wearable devices
+type: Web App
+category: Growth
+client: Dr. Sarah Chen, LMFT
+duration: 3 Months
+websiteLink: harmonywellnesscenter.com
+shortDescription: Transformed a solo therapy practice into a thriving 8-therapist clinic with 45% patient growth through ethical digital marketing and HIPAA-compliant systems
 ---
 
 ##### Project overview
 
-Mobile UX design is the design of user experiences for hand-held and wearable devices. Designers create solutions (typically applications) to meet mobile users' unique requirements and restrictions. Designers focus on accessibility, discoverability
-and efficiency to optimize on-the-go interactive experiences.
+Harmony Wellness Center came to us as a solo therapy practice struggling to manage growth while maintaining quality care. Dr. Chen needed a comprehensive digital presence that would attract the right patients while ensuring complete HIPAA compliance and respecting the therapeutic relationship.
 
-Interface (UI) determines how the app will look like, while UX determines what problem it will solve in the users' life. UI is revolves around visually directing the user about the app interface, while UX includes researching, testing, developing the app.
+The challenge was creating a warm, approachable online presence that reduced stigma around seeking mental health support while implementing systems that could scale with the practice's rapid growth. Every element needed to reflect the practice's trauma-informed approach and commitment to inclusive care.
 
 ##### What we did for this project
 
-A user can engage with a product or service by using a user interface (UI), which is essentially a collection of screens, pages, visual elements (such as buttons and icons). The phrase “User Experience” refers to how a person reacts to each component.
+We developed a complete digital ecosystem that balanced clinical professionalism with accessibility, ensuring every touchpoint respected patient privacy while encouraging those seeking help to reach out.
 
 <ol class="list-inside list-decimal my-5">
-  <li>Strategic Discovery</li>
-  <li>Web application redesign and optimization</li>
-  <li>Mobile application redesign and optimization</li>
-  <li>Landing page redesign and optimization</li>
-  <li>Component-based UI-Kit</li>
-  <li>Product design sprints to explore new functionality</li>
+  <li>HIPAA-compliant website with secure patient portal</li>
+  <li>Ethical SEO strategy targeting specific therapy modalities</li>
+  <li>Automated intake system reducing admin time by 60%</li>
+  <li>Online scheduling with therapist matching capabilities</li>
+  <li>Secure telehealth integration for hybrid care model</li>
+  <li>Content strategy addressing common mental health concerns</li>
 </ol>
 
-![portfolio image](/assets/img/th-1/portfolio-inner-img.jpg)
-
-##### Project results
-
-The UI/UX design of software and applications helps improve customer experience and satisfaction. This ultimately helps increase the number of people using your product. If users encounter roadblocks when trying to complete actions on your product, they are very likely to drop off.
-
-Creating a brand with clear and targeted messaging was crucial in increasing conversions. Together with the Webflow team, we have compiled a new product page structure using the App model and packed that in an excellent cover 🙂
+![portfolio image](/assets/
