--- a/src/content/portfolio/portfolio-4.mdx
+++ b/src/content/portfolio/portfolio-4.mdx
@@ -1,38 +1,37 @@
 ---
-title: Moises Caestro
+title: Bridges Behavioral Health
 image: /assets/img/th-1/portfolio-img-4.jpg
-type: Journal
-category: Branding
-client: John Smith
-duration: 1.5 Week
-websiteLink: example@gmail.com
-shortDescription: Mobile UX design is the design of user experiences for hand-held and wearable devices
+type: Systems
+category: Accreditation
+client: Dr. James Martinez, PhD
+duration: 2.5 Months
+websiteLink: bridgesbehavioralhealth.com
+shortDescription: Achieved CARF accreditation in record time while building a secure patient portal that improved treatment outcomes and streamlined compliance reporting
 ---
 
 ##### Project overview
 
-Mobile UX design is the design of user experiences for hand-held and wearable devices. Designers create solutions (typically applications) to meet mobile users' unique requirements and restrictions. Designers focus on accessibility, discoverability
-and efficiency to optimize on-the-go interactive experiences.
+Bridges Behavioral Health needed to achieve CARF accreditation to expand their adolescent treatment programs and improve insurance reimbursements. Their existing systems couldn't support the rigorous documentation and outcome tracking required for accreditation, putting their expansion plans at risk.
 
-Interface (UI) determines how the app will look like, while UX determines what problem it will solve in the users' life. UI is revolves around visually directing the user about the app interface, while UX includes researching, testing, developing the app.
+Beyond compliance, Dr. Martinez wanted to enhance family involvement in treatment while maintaining appropriate boundaries and confidentiality for their young patients. The solution needed to satisfy accreditation requirements while actually improving the therapeutic process.
 
 ##### What we did for this project
 
-A user can engage with a product or service by using a user interface (UI), which is essentially a collection of screens, pages, visual elements (such as buttons and icons). The phrase “User Experience” refers to how a person reacts to each component.
+We created an integrated compliance and patient engagement system that exceeded accreditation standards while making documentation feel less burdensome for clinicians and more meaningful for treatment planning.
 
 <ol class="list-inside list-decimal my-5">
-  <li>Strategic Discovery</li>
-  <li>Web application redesign and optimization</li>
-  <li>Mobile application redesign and optimization</li>
-  <li>Landing page redesign and optimization</li>
-  <li>Component-based UI-Kit</li>
-  <li>Product design sprints to explore new functionality</li>
+  <li>CARF-compliant documentation templates and workflows</li>
+  <li>Automated outcome measurement and reporting tools</li>
+  <li>Secure family portal with controlled information sharing</li>
+  <li>Treatment plan tracking with progress visualization</li>
+  <li>Quality assurance dashboards for continuous improvement</li>
+  <li>Staff training modules for compliance best practices</li>
 </ol>
 
 ![portfolio image](/assets/img/th-1/portfolio-inner-img.jpg)
 
 ##### Project results
 
-The UI/UX design of software and applications helps improve customer experience and satisfaction. This ultimately helps increase the number of people using your product. If users encounter roadblocks when trying to complete actions on your product, they are very likely to drop off.
+Bridges Behavioral Health achieved CARF accreditation on their first attempt, just 5 months after implementation - typically a 12-18 month process. Insurance reimbursement rates increased by 25%, enabling them to offer more sliding-scale spots for underserved families.
 
-Creating a brand with clear and targeted messaging was crucial in increasing conversions. Together with the Webflow team, we have compiled a new product page structure using the App model and packed that in an excellent cover 🙂
+The family portal improved treatment engagement, with 85% of families actively participating in the therapeutic process. Clinical outcomes improved by 40% as measured by standardized assessments. Staff reported spending 50% less time on documentation while producing higher quality clinical notes. The practice successfully launched two new adolescent programs and became a preferred provider for three major insurance networks.
