--- a/src/content/privacyPolicy/index.mdx
+++ b/src/content/privacyPolicy/index.mdx
@@ -1,26 +1,61 @@
 ##### What information do we collect?
 
-We collect personal information that you provide to us, such as name, contact information, email address, and any other information you choose to provide. We may also collect information about how you interact with our website and services.
+We collect the essentials: your name, email, phone number, and practice details - basically what you'd share at a networking event, minus the awkward small talk. We also track how you use our site (like which pages you visit), but don't worry - we're analyzing website behavior, not yours.
 
-##### Use of Services
+##### How we use your information
 
-1 You must be at least 18 years old to access and use our services.\
-2 You agree to use the services only for lawful purposes and in accordance with these Terms.
-You are solely responsible for any content you post, upload, or transmit through our services.
 
-##### User Accounts
+1. To help grow your practice with targeted marketing strategies and operational improvements.<br/>
+2. To send you helpful resources, tips, and updates (all relevant, no spam - we respect boundaries).<br/>
+3. To provide customer support and answer your questions about growing your practice.  
 
-1 When you create an account with us, you must provide accurate, complete, and up-to-date information.\
-2 You are responsible for safeguarding the password that you use to access the services and for any activities or actions under your password.
 
-##### Privacy
+##### Your privacy rights
 
-Your use of the services is also governed by our Privacy Policy. Please review our Privacy Policy for more information on how we collect, use, and share your personal information.
 
-##### Termination
+1. You can request to see what information we have about you - full transparency, no hidden notes.<br/>
+2. You have the right to update or delete your information at any time - your data, your choice.<br/>
+3. You can opt out of marketing communications while still receiving important service updates.  
 
-These Terms shall be governed and construed in accordance with the laws of Jurisdiction, without regard to its conflict of law provisions..
 
-##### Governing Law
+##### Data security
 
-We may terminate or suspend your account and access to the services immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach these Terms.
+Your information is protected with bank-level encryption and security measures. We take confidentiality as seriously as you do, implementing HIPAA-compliant practices even when not legally required. Only authorized team members can access your data, and only when necessary to serve you.
+
+##### HIPAA compliance
+
+While Mediwave is not a covered entity under HIPAA, we understand the importance of protecting health information. We sign Business Associate Agreements (BAAs) when required and maintain HIPAA-compliant security standards throughout our operations. We never access, store, or process patient health information unless explicitly required for agreed-upon services.
+
+##### Third-party sharing
+
+We only share your information with trusted service providers who help us deliver our services (all bound by strict confidentiality agreements) and when required by law. We NEVER sell your data - that would be a serious boundary violation.
+
+##### Cookies and tracking
+
+We use cookies to remember your preferences and understand how you use our site. These include:
+- Essential cookies for site functionality
+- Analytics cookies to improve our services
+- Marketing cookies to provide relevant content
+
+You can control cookie preferences through your browser settings.
+
+##### Data retention
+
+We keep your information only as long as necessary to provide our services and comply with legal obligations. Typically:
+- Active client data: Duration of service + 7 years
+- Marketing contacts: Until you unsubscribe
+- Website analytics: 26 months
+
+You can request deletion at any time.
+
+##### Children's privacy
+
+Our services are for mental health professionals only. We do not knowingly collect information from anyone under 18. If we discover we've accidentally collected such data, we'll delete it immediately.
+
+##### Policy updates
+
+We may update this policy occasionally to reflect changes in our services or legal requirements. When we do, we'll notify you via email - think of it as keeping you informed about updates to our approach. Continued use of our services after changes means you accept the updated policy.
+
+##### Contact us
+
+Questions about privacy? Want to exercise your data rights? We're here to help. Email us at privacy@mediwave.com and we'll respond within 48 hours. We believe in clear communication and are always happy to discuss how we protect your information.
