--- a/src/content/services/service-4.mdx
+++ b/src/content/services/service-4.mdx
@@ -1,33 +1,34 @@
 ---
-title: Custom Software Development
+title: Professional Website & Online Presence
 icon:
-  blue: /assets/img/icons/icon-blue-service-4.svg
-  black: /assets/img/icons/icon-black-service-4.svg
-description: Custom Software Development is the process of conceptualizing, designing, building & deploying
+  blue: /assets/img/icons/icon-blue-service-2.svg
+  black: /assets/img/icons/icon-black-service-2.svg
+description: Build trust and attract patients with a professional website designed specifically for mental health practices
 image: /assets/img/th-1/service-main-img.jpg
 ---
 
 import ServiceBadge from "../../utils/ServiceBadge.astro";
 import TwoImages from "../../utils/TwoImages.astro";
 
-##### What is Custom Software Development?
+##### Your Website Is Your Digital Front Door
 
-A comprehensive plan that helps you communicate your company's identity to consumers online to increase customer loyalty and sales. A digital brand strategy also defines how your organization wishes to be perceived by consumers.
+For many patients, your website is their first interaction with your practice. We create professional, welcoming websites that build trust, provide valuable information, and make it easy for patients to take the next step.
 
-What makes it unique? What do you want people to think about your product or service? By creating guidelines for your brand, you can ensure every interaction with consumers remains consistent.
+Every mental health website we build is designed with both patient needs and practice goals in mind - from the calming design to the secure patient portal access.
 
-##### How Do You Create an Effective Digital Brand Strategy?
+##### Websites That Convert Visitors Into Patients
 
-Creating an effective digital brand takes time, effort, and due diligence. It's not as simple as making a logo, showing up with a few dozen hashtags, and calling. Let's dive into the roadmap for building a digital brand strategy with a few detailed examples.
+A great mental health website does more than look professional. It guides potential patients from their first visit to booking an appointment, all while maintaining HIPAA compliance.
 
 <div class="font-semibold text-ColorBlack">
   <ServiceBadge>
-    Digital Branding - Creating your brand image through logo, website design,
-    and social media design to produce a solid brand identity through
+    Therapist Profiles - Warm, professional profiles that help patients connect with the right provider
   </ServiceBadge>
   <ServiceBadge>
-    Digital Marketing - Promoting your existing brand image through content
-    marketing and advertising techniques to impact consumers.
+    Online Appointment Booking - Secure, HIPAA-compliant scheduling integrated directly into your website
+  </ServiceBadge>
+  <ServiceBadge>
+    Resource Library - Educational content that positions you as a trusted mental health resource
   </ServiceBadge>
 </div>
 
@@ -36,12 +37,10 @@ Creating an effective digital brand takes time, effort, and due diligence. It's 
   img2={"/assets/img/th-1/service-inner-2-img.jpg"}
 />
 
-##### Digital Branding vs. Digital Marketing
+##### Mobile-First Design for Today's Patients
 
-It is a common misconception to confuse digital marketing and digital branding. While you may think that these phrases are interchangeable, there is a distinct difference. Creating an effective digital brand takes time, effort, and due diligence. It's not as simple as making a logo, showing up with a few dozen hashtags, and calling it a day.
+Over 70% of patients search for mental health providers on mobile devices. We ensure your website looks perfect and functions flawlessly on every device.
 
-##### Are You Ready to Digitize Your Business Brand?
+##### Launch Your New Website in 30 Days
 
-Now it is clear what digital branding is and what are the strategies. That means it’s time for you to put it into practice. There are nine ways that you can use for maximum the results.
-
-However, you can also try some of the strategies that you think are the easiest and most important. For example, you can start by creating a logo, using social media, or creating a website. Keep the spirit and see you on the next article!
+Get a professional, conversion-focused website that represents your practice perfectly. We handle everything from design to launch, including content creation and SEO optimization.
