--- a/src/content/site/footer.mdx
+++ b/src/content/site/footer.mdx
@@ -1,18 +1,20 @@
 ---
-title: Ready to grow your business digitally?
+title: Ready to grow your mental health practice?
 button:
-  text: Let's start the project
-  link: /portfolio
+  text: Get your growth plan
+  link: /contact
 logo: /assets/img/logoLight.svg
-description: We are strategic & creative digital agency who are focused on user experience, mobile, social, data gathering and promotional offerings.
-mail: yourdemo@email.com
+description: The specialized marketing and operations partner for therapists, counselors, and mental health clinics. We help you reach more people who need your help while respecting the sensitivity of mental healthcare.
+mail: hello@mediwave.com
 PrimaryPages:
   - name: Home
     link: /
-  - name: About Us
+  - name: About
     link: /about
-  - name: Service
-    link: /service
+  - name: Services
+    link: /services
+  - name: Success Stories
+    link: /portfolio
   - name: Pricing
     link: /pricing
   - name: Contact
@@ -23,17 +25,17 @@ UtilityPages:
   - name: Coming Soon
     link: /coming-soon
 Resources:
-  - name: Terms And Condition
-    link: /terms-condition
   - name: Privacy Policy
     link: /privacy-policy
+  - name: Terms & Conditions
+    link: /terms-condition
+  - name: HIPAA Compliance
+    link: /hipaa-compliance
 socialLinks:
-  - icon: fa-x-twitter
-    link: https://twitter.com
+  - icon: fa-linkedin
+    link: https://linkedin.com/company/mediwave
   - icon: fa-facebook-f
-    link: https://www.facebook.com/
+    link: https://www.facebook.com/mediwave
   - icon: fa-instagram
-    link: https://www.instagram.com/
-  - icon: fa-github
-    link: https://www.github.com/
+    link: https://www.instagram.com/mediwave
 ---
