--- a/src/content/site/meta.mdx
+++ b/src/content/site/meta.mdx
@@ -1,6 +1,6 @@
 ---
-siteName: Agency04
-description: Agency04 Template
+siteName: Mediwave - Mental Health Practice Partner
+description: Full-service marketing, operations, and accreditation support for mental health practices. HIPAA-compliant solutions for therapists, counselors, and clinics nationwide.
 logo: /assets/img/logoDark.svg
 favicon: /favicon.webp
 web3AccessKey: 6a2a9f70-9f7c-41e7-afb3-349241189016
