--- a/src/content/termsCondition/index.mdx
+++ b/src/content/termsCondition/index.mdx
@@ -1,26 +1,74 @@
-##### What information do we collect?
+##### What we're agreeing to
 
-We collect personal information that you provide to us, such as name, contact information, email address, and any other information you choose to provide. We may also collect information about how you interact with our website and services.
+These terms outline our professional relationship - think of it as informed consent for business services. By working with Mediwave, you're agreeing to these terms. We've kept the legalese to a minimum because we believe in clear communication, just like you do with your clients.
 
-##### Use of Services
+##### Who can use our services
 
-1 You must be at least 18 years old to access and use our services.\
-2 You agree to use the services only for lawful purposes and in accordance with these Terms.
-You are solely responsible for any content you post, upload, or transmit through our services.
+1. You must be a licensed mental health professional or authorized representative of a mental health practice.
+2. You agree to provide accurate information about your credentials and practice - honesty is the foundation of our partnership.
+3. You'll use our services ethically and in compliance with all healthcare regulations (we're all about maintaining professional standards).
 
-##### User Accounts
+##### Your practice account
 
-1 When you create an account with us, you must provide accurate, complete, and up-to-date information.\
-2 You are responsible for safeguarding the password that you use to access the services and for any activities or actions under your password.
+1. When you create an account, please provide accurate practice information - we need the real details to serve you properly.
+2. Keep your login credentials secure like you would patient records - your account security is your responsibility.
+3. Let us know immediately if you suspect any unauthorized access - we take breaches as seriously as you do.
 
-##### Privacy
+##### How our service plans work
 
-Your use of the services is also governed by our Privacy Policy. Please review our Privacy Policy for more information on how we collect, use, and share your personal information.
+You choose from our three service plans (Solo Practice, Group Practice, or Clinic Transformation) based on your practice's needs. Each plan includes specific deliverables and timelines outlined on our pricing page. We follow our proven methodology - no reinventing the wheel. Think of it as evidence-based marketing: we use what works, consistently and reliably.
+
+##### Payment and billing
+
+1. Services are billed monthly in advance based on your chosen plan.
+2. All plans are month-to-month - cancel anytime. 
+3. Revenue Cycle Management (if selected) is billed as a percentage of collections for the previous month. 
+4. No setup fees, no hidden costs - the price you see is what you pay.
+
+##### Service delivery
+
+We deliver services according to your chosen plan's specifications. While we tailor messaging to your practice's specialties and values, the core methodology remains consistent - that's how we achieve predictable results. You'll receive regular reports and have scheduled check-ins based on your plan level.
+
+##### Intellectual property
+
+Your practice retains ownership of all practice-specific content (logos, photos, clinical approach descriptions). We retain ownership of our proprietary methodologies, templates, and systems. You get a license to continue using any materials we create for your practice. Think of it like therapy homework - we create the worksheets, but they become yours to use.
+
+##### Professional boundaries
+
+Just like in therapy, boundaries matter. We won't:
+- Access patient information unless explicitly required and covered by a BAA
+- Make clinical claims or provide medical advice
+- Guarantee specific patient volumes or revenue (results vary by market and specialty)
+- Share your practice information with competitors
+
+##### Performance expectations
+
+Our service plans are designed based on typical results across hundreds of practices. While most practices see significant growth (30-50% increase in inquiries), individual results depend on factors including your market, specialty, and competition. We guarantee service delivery according to your plan, not specific outcomes.
 
 ##### Termination
 
-These Terms shall be governed and construed in accordance with the laws of Jurisdiction, without regard to its conflict of law provisions..
+1. Cancel anytime with 30 days written notice - no questions asked.
+2. You'll receive all work completed through your final billing period.
+3. We'll provide transition documentation for any systems we've set up.
+4. Outstanding balances remain due.
+5. We may terminate immediately for non-payment or violations of healthcare regulations.
 
-##### Governing Law
+##### Dispute resolution
 
-We may terminate or suspend your account and access to the services immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach these Terms.
+If we have a disagreement, we'll first try to work it out like professionals through good faith discussion. If that doesn't work, we'll use mediation before considering legal action. Any legal proceedings will take place in [Your State], because traveling for court is nobody's idea of self-care.
+
+##### Limitation of liability
+
+Our liability is limited to the fees you've paid us in the past 3 months. We're responsible for delivering services according to your chosen plan, not for factors outside our control like patient retention, clinical outcomes, or insurance reimbursements.
+
+##### Updates to terms
+
+We may update these terms occasionally as regulations change or our services evolve. We'll give you 30 days notice of any significant changes - no surprise modifications. Continued use of our services after changes means you accept the updated terms.
+
+##### The fine print
+
+These terms constitute our entire agreement and supersede any previous understandings. If any part is found unenforceable, the rest remains valid. These terms aren't transferable - they're between your practice and Mediwave only.
+
+##### Questions?
+
+If anything here is unclear or you need clarification, email us at legal@mediwave.com. We believe in transparency and are happy to explain any aspect of our agreement. After all, a good therapeutic relationship - even a business one - is built on clear communication and mutual understanding.
