--- a/src/content/IndexPage/content-2.mdx
+++ b/src/content/IndexPage/content-2.mdx
@@ -1,10 +1,10 @@
 ---
-header: Discover the latest digital strategies & emerging ideas for business growth
+header: Everything your mental health practice needs to thrive
 image: /assets/img/th-1/content-img-2.png
 points:
-  - Reach new business opportunities or test your product ideas.
-  - Automate your processes and get data-driven business insights.
-  - Create lightweight, scalable, and easly accessible cloud solution.
+  - Fill your schedule with targeted digital marketing that respects patient privacy and reduces stigma
+  - Streamline operations with HIPAA-compliant automation that reduces no-shows by up to 40%
+  - Achieve and maintain accreditation with expert guidance through CARF, Joint Commission, and more
 ---
 
-Our brand tenders and marketing mixologists always serve up unique, design-forward websites coded with today’s modern technologies
+Stop juggling multiple vendors or trying to adapt generic solutions to mental health needs. Mediwave brings together specialized expertise in mental health marketing, operations, and compliance - all under one roof.
