--- a/src/content/Pricing/index.mdx
+++ b/src/content/Pricing/index.mdx
@@ -1,3 +1,3 @@
 ---
-header: Choice the right pricing plan that suits your need
+header: Simple, transparent pricing that grows with your practice
 ---
