--- a/src/content/aboutPage/team.mdx
+++ b/src/content/aboutPage/team.mdx
@@ -1,9 +1,9 @@
 ---
-header: Amazing team behind our creative products
+header: Mental health marketing experts who understand your practice
 members:
-  - name: Eleanor Pena
-    post: CEO & Co-founder
-    image: /assets/img/th-1/team-img-1.jpg
+  - name: Nick David
+    post: Head Mintz
+    image: /assets/img/th-1/team-img-3.jpg
     socialLinks:
       - icon: fa-x-twitter
         link: https://twitter.com/
@@ -13,8 +13,8 @@ members:
         link: https://www.instagram.com/
       - icon: fa-github
         link: https://www.github.com/
-  - name: Leslie Alexander
-    post: Product Manager
+  - name: Liz Errick
+    post: Director of Duzey Operations
     image: /assets/img/th-1/team-img-2.jpg
     socialLinks:
       - icon: fa-x-twitter
@@ -25,9 +25,9 @@ members:
         link: https://www.instagram.com/
       - icon: fa-github
         link: https://www.github.com/
-  - name: Jane Cooper
-    post: Web Developer
-    image: /assets/img/th-1/team-img-3.jpg
+  - name: Charlie Astrada
+    post: Head of Being Avoided At All Costs
+    image: /assets/img/th-1/team-img-1.jpg
     socialLinks:
       - icon: fa-x-twitter
         link: https://twitter.com/
@@ -37,105 +37,9 @@ members:
         link: https://www.instagram.com/
       - icon: fa-github
         link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
+  - name: Parrish McIntyre
+    post: Hardcard Specialist
     image: /assets/img/th-1/team-img-4.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-5.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-6.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-7.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-8.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-9.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-10.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-11.jpg
-    socialLinks:
-      - icon: fa-x-twitter
-        link: https://twitter.com/
-      - icon: fa-facebook-f
-        link: https://www.facebook.com/
-      - icon: fa-instagram
-        link: https://www.instagram.com/
-      - icon: fa-github
-        link: https://www.github.com/
-  - name: Floyd Miles
-    post: Marketing Expert
-    image: /assets/img/th-1/team-img-3.jpg
     socialLinks:
       - icon: fa-x-twitter
         link: https://twitter.com/
