--- a/src/content/blogs/blog-2.mdx
+++ b/src/content/blogs/blog-2.mdx
@@ -1,35 +1,37 @@
 ---
-title: Hiring a digital agency — 5 things you need to check out before signing up & the future of the digital agency
-date: Jan 20,2023
+title: "HIPAA-Compliant Marketing: What Therapists Can (and Can't) Say Online"
+date: Feb 08, 2023
 author:
-  name: Lesie Alenxander
+  name: Michael Thompson
   img: /assets/img/th-1/blog-author-img-1.jpg
-category: Technology
-shortDescription: We'd been making awesome apps for years now, but always just barely stumbled through project management. We pissed off clients and burned bridges, even though we were...
+category: Compliance
+shortDescription: Marketing your mental health practice online doesn't mean compromising patient privacy or professional ethics. Learn the essential guidelines for HIPAA-compliant marketing that builds trust while growing your practice.
 image: /assets/img/th-1/blog-main-2.jpg
 ---
 
 import Bold from "../../utils/Bold.astro";
 import ThreeImages from "../../utils/ThreeImages.astro";
 
-It was a rainy winter day and I was having another project management crisis with business a partner Gavin at our digital product studio Input Logic. The exact nature of the crisis eludes a me now, but I’m sure we’d let some client expectations slip and were feeling guilty again.
+Last month, a therapist called us in a panic. She'd shared a heartwarming success story on her practice's Facebook page - with permission, she thought - only to realize she'd inadvertently violated HIPAA. The post was deleted, but the damage to her professional reputation lingered. This scenario plays out more often than you'd think, and it's completely preventable.
 
-<Bold>Using Slack :</Bold>
-Our team of eight is pretty playful. We don’t take ourselves a seriously. We
-level up for the our abilities, play hackysack, ship great work. We wanted a
-project management process of that was in line with our values: relevant and
-helpful without sucking the fun out of things.
+<Bold>The HIPAA Marketing Minefield</Bold>
+Marketing feels tricky for mental health professionals. You want to show your expertise and connect with potential clients, but you're bound by strict privacy laws and ethical standards. The good news? You can build a thriving online presence while staying completely compliant. You just need to know the rules.
 
-<Bold>Using Trello :</Bold>
-Trello is the visual tool that empowers your team to manage an type of project,
-workflow, and task tracking. Add files, checklists, or even automation:
-Customize it all for how your team for works best. Just sign up, create a board,
-and you're off!
+<Bold>What You CAN Share Online</Bold>
+Let's start with the green zone - content that's always safe to share:
+- Educational content about mental health conditions and treatments
+- Your professional qualifications and therapeutic approach
+- General practice information (hours, location, services offered)
+- Mental health tips and coping strategies
+- Your professional story and why you became a therapist
 
-<Bold>Using TeamGantt :</Bold>
-TeamGantt is a project collaboration & planning software for teams. The software
-useful for combines in Gantt charts with task management, task level
-communication, file sharing and time tracking.
+<Bold>The Danger Zones to Avoid</Bold>
+Here's where therapists often stumble without realizing it:
+- Any information that could identify a patient (even if you think it's anonymous)
+- Photos or videos from your office that might show patients
+- Specific treatment outcomes tied to identifiable situations
+- Screenshots of patient communications (even "anonymous" ones)
+- Testimonials without proper written authorization
 
 <ThreeImages
   img1={"/assets/img/th-1/blog-inner-img-1.jpg"}
@@ -37,25 +39,55 @@ communication, file sharing and time tracking.
   img3={"/assets/img/th-1/blog-inner-img-3.jpg"}
 />
 
-<Bold>Practice #1 — Project based channels :</Bold>
-We create a separate channel for every project, period. We invite only those
-team a members who are involved in the project, along with the project manager.
+<Bold>The Right Way to Use Success Stories</Bold>
+Success stories are powerful marketing tools, but they require careful handling:
 
-<Bold>Practice #2—Agreements pinned to project channels :</Bold>
-Our client agreements are separated into a general agreement and a statement of
-work. We create them in Google Docs and then export them as PDF to be shared in
-Slack.
+1. **Get written consent**: Use a specific authorization form for marketing purposes
+2. **Change identifying details**: Alter ages, genders, occupations, and specific circumstances
+3. **Create composites**: Combine elements from multiple cases to create representative examples
+4. **Focus on the journey**: Emphasize the therapeutic process rather than specific client details
 
-<Bold>Practice #3—Live timeline as project channel description :</Bold>
-We started using TeamGantt for creating project timelines and we share these
-with our team and the clients team. We detail out the intended timeline right
-from the start, so we have the same expectations the client does. Each team
-member working on the project offers.
+<Bold>Social Media Best Practices</Bold>
+Your social media presence can attract clients while maintaining professionalism:
+- Never friend or follow current clients on personal accounts
+- Use separate professional accounts for your practice
+- Respond to comments publicly with general information only
+- Move specific inquiries to private, secure channels
+- Review your privacy settings regularly
 
-<Bold>How it all came together :</Bold>
-So, after years of occasionally pissing off clients with sloppy project
-management, we have a levelled up our game with a few simple Slack based
-practices. Pretty dope.We're still working to improve and learning a ton, so
-please comment and follow along to join the journey.
+<Bold>Website Compliance Essentials</Bold>
+Your website needs more than just good content. Ensure you have:
+- A comprehensive privacy policy
+- Clear disclaimers about online communication limits
+- Secure contact forms (not just email links)
+- HTTPS encryption on all pages
+- No tracking pixels that compromise visitor privacy
 
-<Bold>Thanks for reading ❤</Bold>
+<Bold>The Ethics of Online Reviews</Bold>
+Reviews are complicated in mental health. Here's how to handle them:
+- Never respond with any client-specific information
+- Don't solicit reviews from current clients (it's an ethical violation)
+- If you receive a negative review, consult with a lawyer before responding
+- Consider having a policy about not reading reviews to protect therapeutic relationships
+
+<Bold>Email Marketing Done Right</Bold>
+Email can be effective if handled properly:
+- Use HIPAA-compliant email services
+- Never include patient information in newsletters
+- Separate your marketing list from your patient communications
+- Include clear unsubscribe options
+- Focus on educational content, not individual cases
+
+<Bold>Your Compliance Checklist</Bold>
+Before posting any content, ask yourself:
+- Could someone identify a patient from this?
+- Am I sharing professional insights or patient details?
+- Have I removed all identifying information?
+- Would I be comfortable if my licensing board saw this?
+- Does this maintain professional boundaries?
+
+<Bold>Marketing That Builds Trust</Bold>
+
+The most effective marketing for mental health practices isn't about being the loudest - it's about being the most trustworthy. When potential clients see that you take privacy seriously in your marketing, they feel confident you'll protect their information in treatment too.
+
+Remember: Your ethical, HIPAA-compliant approach to marketing isn't a limitation - it's your competitive advantage. It shows potential clients that you understand and respect the sacred nature of the therapeutic relationship before they even walk through your door.
