--- a/src/content/career/career-3.mdx
+++ b/src/content/career/career-3.mdx
@@ -1,80 +1,72 @@
 ---
-position: Backend developer
-description: Product designers are involved in the entire design process a of a product, while UX designers focus more on the hands-on design portion of a best a process. Product designers and user an experience (UX) designers are the similar—in fact, sometimes the titles are used interchangeably.
+position: Full-Stack Developer (JAMstack)
+description: Build fast, secure, and HIPAA-compliant web applications for mental health practices. As a Full-Stack Developer at Mediwave, you'll create modern JAMstack solutions that help therapists connect with patients while maintaining the highest standards of privacy and performance. We're looking for someone who loves React, thinks serverless-first, and can adapt quickly to new technologies.
 type: Remote
 category: development
-location: United State
-salaryRange: $15k-$35k
+location: United States
+salaryRange: $80k-$120k
 ---
 
 ##### Job Responsibilities
 
-By partnering with cross-functional teams and customers, for you will turn your insights into delightful creative environment that requires proven leadership skills and the ability.
+You'll architect and build web applications that power the digital presence of mental health practices, from marketing websites to patient portals, all while ensuring HIPAA compliance and exceptional performance.
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    Build responsive, accessible websites using React, Next.js, Gatsby, or Astro
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Develop serverless APIs and functions using AWS Lambda, API Gateway, and DynamoDB</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Implement secure patient intake forms and scheduling systems with proper encryption
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Optimize websites for Core Web Vitals and perfect Lighthouse scores</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Integrate third-party APIs (payment processors, scheduling tools, telehealth platforms)
   </li>
   <li>
-    Work closely with product engineers to suggest improvements for products.
+    Set up CI/CD pipelines and infrastructure as code using AWS CDK or Terraform
   </li>
   <li>
-    Present product design ideas to cross-functional teams and senior
-    leadership.
+    Collaborate with designers to implement pixel-perfect, performant user interfaces
   </li>
 </ul>
 
 ##### Requirements
 
-Proven experience in all phases of the design process including user for a research, copywriting, wireframing, prototyping, visual design, interaction design, and usability testing
+We need a versatile developer who can handle both frontend polish and backend complexity, with a security-first mindset essential for healthcare applications.
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    3+ years of full-stack development experience with modern JavaScript
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Strong proficiency in React and at least one meta-framework (Next.js, Gatsby, Remix)</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Experience with AWS services (Lambda, S3, CloudFront, DynamoDB, Cognito)
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Understanding of HIPAA compliance and security best practices for healthcare apps</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Proven ability to learn new technologies quickly and apply them effectively
   </li>
   <li>
-    Work closely with product engineers to suggest improvements for products.
+    Experience with headless CMS platforms (Strapi, Sanity, Contentful)
   </li>
   <li>
-    Present product design ideas to cross-functional teams and senior
-    leadership.
+    Bonus: Experience with healthcare APIs, FHIR standards, or telehealth platforms
   </li>
 </ul>
 
-##### Skill & Experience
+##### Skills & Experience
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    {" "}
-    Set design requirements based on information from internal teams & research.
+    Expert-level JavaScript/TypeScript with modern ES6+ features
   </li>
-  <li>Identify new product improvement opportunities.</li>
+  <li>Proficiency with Git, GitHub Actions, and modern DevOps practices</li>
   <li>
-    {" "}
-    Analyze how a new product satisfies market needs & consumer preferences.
+    Experience with serverless architectures and event-driven systems
   </li>
-  <li>Stay up to date on current industry trends and market conditions.</li>
+  <li>Strong understanding of web security, encryption, and data privacy</li>
   <li>
-    Modify and revise existing designs to meet changing customer preferences.
+    Familiarity with infrastructure as code and AWS best practices
   </li>
 </ul>
