--- a/src/content/portfolio/portfolio-3.mdx
+++ b/src/content/portfolio/portfolio-3.mdx
@@ -1,38 +1,37 @@
 ---
-title: Social Media
+title: Serenity Counseling Collective
 image: /assets/img/th-1/portfolio-img-3.jpg
 type: Campaign
-category: UI/UX Design
-client: John Smith
-duration: 1 Week
-websiteLink: example@gmail.com
-shortDescription: Mobile UX design is the design of user experiences for hand-held and wearable devices
+category: Brand
+client: Dr. Lisa Thompson, LPC
+duration: 6 Weeks
+websiteLink: serenitycounselingcollective.com
+shortDescription: Built trust and reduced stigma through an ethical awareness campaign that increased community engagement by 200% while maintaining complete patient privacy
 ---
 
 ##### Project overview
 
-Mobile UX design is the design of user experiences for hand-held and wearable devices. Designers create solutions (typically applications) to meet mobile users' unique requirements and restrictions. Designers focus on accessibility, discoverability
-and efficiency to optimize on-the-go interactive experiences.
+Serenity Counseling Collective specializes in anxiety and depression treatment but struggled with community awareness in a conservative area where mental health stigma runs deep. Dr. Thompson wanted to normalize therapy and reach underserved populations without using traditional advertising that could feel invasive or triggering.
 
-Interface (UI) determines how the app will look like, while UX determines what problem it will solve in the users' life. UI is revolves around visually directing the user about the app interface, while UX includes researching, testing, developing the app.
+The challenge was creating an educational campaign that would resonate with hesitant individuals while respecting the sensitivity of mental health topics. Every message needed to reduce barriers to seeking help while maintaining the practice's professional credibility.
 
 ##### What we did for this project
 
-A user can engage with a product or service by using a user interface (UI), which is essentially a collection of screens, pages, visual elements (such as buttons and icons). The phrase “User Experience” refers to how a person reacts to each component.
+We developed a community-focused awareness campaign that educated while empowering, using storytelling and evidence-based content to gently challenge misconceptions about mental health treatment.
 
 <ol class="list-inside list-decimal my-5">
-  <li>Strategic Discovery</li>
-  <li>Web application redesign and optimization</li>
-  <li>Mobile application redesign and optimization</li>
-  <li>Landing page redesign and optimization</li>
-  <li>Component-based UI-Kit</li>
-  <li>Product design sprints to explore new functionality</li>
+  <li>Educational content series addressing common mental health myths</li>
+  <li>Anonymous success story campaign (with full consent)</li>
+  <li>Community workshop series on stress management</li>
+  <li>Strategic partnerships with local primary care providers</li>
+  <li>Social media strategy focused on psychoeducation</li>
+  <li>Referral network development with trusted community leaders</li>
 </ol>
 
 ![portfolio image](/assets/img/th-1/portfolio-inner-img.jpg)
 
 ##### Project results
 
-The UI/UX design of software and applications helps improve customer experience and satisfaction. This ultimately helps increase the number of people using your product. If users encounter roadblocks when trying to complete actions on your product, they are very likely to drop off.
+The campaign transformed how the community viewed mental health support. Website traffic increased by 200% with visitors spending 4x longer reading educational content. The free workshop series attracted over 500 attendees, with 30% scheduling initial consultations.
 
-Creating a brand with clear and targeted messaging was crucial in increasing conversions. Together with the Webflow team, we have compiled a new product page structure using the App model and packed that in an excellent cover 🙂
+New patient inquiries shifted from crisis-only to preventive care, with 60% citing the educational content as their reason for reaching out. The practice grew from 2 to 6 therapists to meet demand. Most significantly, follow-up surveys showed 78% of workshop attendees felt less stigma about seeking therapy, creating lasting change in community attitudes toward mental health.
