--- a/src/content/services/index.mdx
+++ b/src/content/services/index.mdx
@@ -1,3 +1,3 @@
 ---
-indexheader: All the digital services that are convenient for you
+indexheader: Everything your mental health practice needs to grow and thrive
 ---
