--- a/src/content/services/service-2.mdx
+++ b/src/content/services/service-2.mdx
@@ -1,33 +1,34 @@
 ---
-title: Web Design & App Development
+title: Practice Operations & Automation
 icon:
-  blue: /assets/img/icons/icon-blue-service-2.svg
-  black: /assets/img/icons/icon-black-service-2.svg
-description: Web design & development is an umbrella term that describes the process of creating a website
+  blue: /assets/img/icons/icon-blue-service-4.svg
+  black: /assets/img/icons/icon-black-service-4.svg
+description: Streamline your practice with modern tools that save time, reduce no-shows, and improve patient care
 image: /assets/img/th-1/service-main-img.jpg
 ---
 
 import ServiceBadge from "../../utils/ServiceBadge.astro";
 import TwoImages from "../../utils/TwoImages.astro";
 
-##### What is Web Design & App Development?
+##### Run Your Mental Health Practice More Efficiently
 
-A comprehensive plan that helps you communicate your company's identity to consumers online to increase customer loyalty and sales. A digital brand strategy also defines how your organization wishes to be perceived by consumers.
+Time spent on administrative tasks is time away from patients. We implement smart automation and practice management solutions that handle the routine work, so you can focus on providing excellent care.
 
-What makes it unique? What do you want people to think about your product or service? By creating guidelines for your brand, you can ensure every interaction with consumers remains consistent.
+From automated appointment reminders to streamlined intake processes, we help mental health practices operate more efficiently while maintaining the personal touch your patients expect.
 
-##### How Do You Create an Effective Digital Brand Strategy?
+##### Technology That Works for Mental Health Practices
 
-Creating an effective digital brand takes time, effort, and due diligence. It's not as simple as making a logo, showing up with a few dozen hashtags, and calling. Let's dive into the roadmap for building a digital brand strategy with a few detailed examples.
+We specialize in implementing HIPAA-compliant solutions designed specifically for mental health providers. Our systems integrate seamlessly with your existing workflow.
 
 <div class="font-semibold text-ColorBlack">
   <ServiceBadge>
-    Digital Branding - Creating your brand image through logo, website design,
-    and social media design to produce a solid brand identity through
+    Automated Scheduling - Online booking with smart scheduling rules and automated reminders to reduce no-shows
   </ServiceBadge>
   <ServiceBadge>
-    Digital Marketing - Promoting your existing brand image through content
-    marketing and advertising techniques to impact consumers.
+    Digital Intake Forms - Secure, HIPAA-compliant forms patients complete before appointments
+  </ServiceBadge>
+  <ServiceBadge>
+    Billing Optimization - Streamlined billing processes and insurance verification systems
   </ServiceBadge>
 </div>
 
@@ -36,12 +37,10 @@ Creating an effective digital brand takes time, effort, and due diligence. It's 
   img2={"/assets/img/th-1/service-inner-2-img.jpg"}
 />
 
-##### Digital Branding vs. Digital Marketing
+##### Reduce No-Shows and Administrative Burden
 
-It is a common misconception to confuse digital marketing and digital branding. While you may think that these phrases are interchangeable, there is a distinct difference. Creating an effective digital brand takes time, effort, and due diligence. It's not as simple as making a logo, showing up with a few dozen hashtags, and calling it a day.
+Our automated systems typically reduce no-shows by 40% and save practices 10+ hours per week on administrative tasks. That's more time for patients and better revenue for your practice.
 
-##### Are You Ready to Digitize Your Business Brand?
+##### Transform Your Practice Operations
 
-Now it is clear what digital branding is and what are the strategies. That means it’s time for you to put it into practice. There are nine ways that you can use for maximum the results.
-
-However, you can also try some of the strategies that you think are the easiest and most important. For example, you can start by creating a logo, using social media, or creating a website. Keep the spirit and see you on the next article!
+Modern technology doesn't mean losing the personal touch. We help you implement systems that enhance the patient experience while making your practice run smoothly.
